fixed z-index issue between element settings and media gallery

--- a/styles/editor-interface.css
+++ b/styles/editor-interface.css
@@ -7365,7 +7365,7 @@ i.upfront-field-icon-burger-trigger {
   left: 0;
   background: #263a4d;
   opacity: .75;
-  z-index: 10001003; }
+  z-index: 10001004; }
 
 #upfront-popup {
   position: fixed;
