--- a/styles/sass/partials/_popup.scss
+++ b/styles/sass/partials/_popup.scss
@@ -7,7 +7,7 @@
 	left: 0;
 	background: #263a4d;
 	opacity: .75;
-	z-index: 10001003;
+	z-index: 10001004;
 }
 #upfront-popup {
 	position: fixed;
